<resources>
    <string name="app_name_txt">AppMoviment</string>
    <string name="monitor_txt">Monitor</string>
    <string name="historico_txt">Histórico</string>
    <string name="perfil_txt">Perfil</string>
    <string name="configuracoes_txt">Configurações</string>
    <string name="creditos_txt">Créditos</string>
    <string name="caminhada_txt">Caminhada</string>
    <string name="corrida_txt">Corrida</string>
    <string name="bicicleta_txt">Bicicleta</string>
    <string name="kmh_txt">Km/h (Quilometro por hora)</string>
    <string name="mph_txt">Mph (Milhas por hora)</string>
    <string name="tipoExercicios_txt">Tipos de Exercicios</string>
    <string name="uniVelocidade_txt">Unidade de apresentação da velocidade</string>
    <string name="orientacaoMapa_txt">Orientação do Mapa</string>
    <string name="orientacaoNenhuma_txt">Nenhuma</string>
    <string name="orientacaoNorteCima_txt">Norte em Cima</string>
    <string name="orientacaoCursoCima_txt">Curso em Cima</string>
    <string name="tipoMapa_txt">Tipo do Mapa</string>
    <string name="vetorial_txt">Vetorial</string>
    <string name="imagemSatelite_txt">Imagem de Satélite</string>
    <string name="inforcacao_trafego_txt">Informações de Tráfego</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Qual_Seu_Nome">Qual Seu Nome?</string>
    <string name="salvar">Salvar</string>
    <string name="nasci">Data de nascimento</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="inicio_txt">Inicio</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="perfil">perfil</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Perfil_text">Perfil</string>
    <string name="subTexto">subTexto</string>
    <string name="Monitore_sua_qualidadede_vida">Monitore sua qualidade de vida</string>
</resources>